# epigraph

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  calibration.toml  providers.toml  providers.toml.example  release-policy.toml
crates/epigraph-api/: Cargo.toml
crates/epigraph-api/src/: access_control.rs  errors.rs  lib.rs  metrics.rs  openapi.rs  query_parser.rs  state.rs  tls.rs  webhook_bridge.rs
crates/epigraph-api/tests/: admin_scope_promotions_test.rs  agent_mutation_auth_test.rs  alt_set_decisions_view_test.rs  alternative_of_symmetric_dedup.rs  alternative_set_view_closure.rs  audit_integration_tests.rs  boot_secret_gate_test.rs  bp_apply_plausibility_bounds.rs  build_from_bridges_test.rs  claims_by_labels.rs  dedup_admin_scope_test.rs  dedup_endpoint_test.rs  dedup_negative_test.rs  embedding_integration_tests.rs  embedding_neighborhood_density_test.rs  entities_scope_test.rs  events_unified_test.rs  graph_neighborhoods_test.rs  graph_routes_test.rs  graph_themes_test.rs  handler_audit_tests.rs  hypothesize_cluster_test.rs  key_management_tests.rs  link_hierarchical_test.rs  migrate_on_startup.rs  oauth_authorization_code.rs  oauth_db.rs  oauth_http.rs  oauth_redirect_flow.rs  oauth_token_grant.rs  openapi_paths_test.rs  patch_claim_http_test.rs  policies_auth_test.rs  post_claims_dedup_409.rs  read_path_authz_test.rs  security_tests.rs  supersede_scope_check_test.rs  update_claim_ownership_test.rs  update_labels_ownership_test.rs  webhooks_auth_test.rs  (+4 more)
crates/epigraph-cli/: Cargo.toml
crates/epigraph-cli/src/: bootstrap.rs  decompose.rs  lib.rs  matching_client.rs  recompute_betp.rs  reembed.rs
crates/epigraph-cli/tests/: bootstrap_clients.rs  bridge_candidates.rs  bridge_component_pipeline.rs  bridge_components.rs  bridge_spine.rs  bridge_sweep_pipeline.rs  cross_source_sweep_smoke.rs  persist_decomposition_test.rs  pr_hierarchical_ingest_test.rs  recompute_betp_cohort.rs  recompute_betp_run.rs  reembed_idempotent.rs  rerank_candidates_table.rs
crates/epigraph-core/: Cargo.toml
crates/epigraph-core/src/: canonical_scopes.rs  challenge.rs  edge.rs  errors.rs  extensions.rs  graph.rs  ids.rs  labels.rs  lib.rs  node.rs  properties.rs  prov.rs  traits.rs  truth.rs
crates/epigraph-core/tests/: agent_identity_tests.rs  extensions.rs  property_tests.rs  semantic_link_tests.rs
crates/epigraph-crypto/: Cargo.toml
crates/epigraph-crypto/benches/: crypto_benchmarks.rs
crates/epigraph-crypto/src/: canonical.rs  did_key.rs  encryption.rs  epoch.rs  errors.rs  hasher.rs  key_exchange.rs  lib.rs  proxy_re.rs  signer.rs  verifier.rs
crates/epigraph-db/: Cargo.toml  README.md
crates/epigraph-db/src/: access_control.rs  errors.rs  lib.rs  pool.rs
crates/epigraph-db/tests/: agent_set_llm_properties.rs  are_all_current.rs  batch_operations_tests.rs  cascade_delete_tests.rs  claim_get_by_id_with_labels.rs  claim_nearest_by_embedding.rs  claim_repo_helpers.rs  claim_search_by_embedding.rs  claim_search_claims_by_embedding.rs  claim_search_current.rs  claim_search_hybrid.rs  deprecate_claim_nulls_embedding.rs  edge_repo_tests.rs  edge_validation_tests.rs  evolve_step_repo.rs  frame_repository_properties.rs  helpers.rs  last_match_scan_column.rs  lineage_heads.rs  lineage_tests.rs  list_by_labels.rs  list_by_truth_range.rs  list_undecomposed.rs  mark_duplicate_nulls_embedding.rs  mark_duplicate_repo.rs  mass_function_evidence_id_roundtrip.rs  mass_function_locality_tag_roundtrip.rs  match_candidate_migration.rs  match_candidate_repo.rs  paper_repo_tests.rs  perspective_evidence_fk_tests.rs  same_source_papers_truth_table.rs  supersede_carries_labels_and_filters.rs  supersede_nulls_embedding.rs
crates/epigraph-ds/: Cargo.toml
crates/epigraph-ds/src/: combination.rs  errors.rs  frame.rs  lib.rs  mass.rs  measures.rs  monoid.rs
crates/epigraph-ds/tests/: order_independence_smoke.rs  perspectival_seed_validation.rs
crates/epigraph-embeddings/: Cargo.toml
crates/epigraph-embeddings/src/: cache.rs  config.rs  errors.rs  lib.rs  normalizer.rs  rate_limiter.rs  repository.rs  service.rs  tokenizer.rs
crates/epigraph-embeddings/tests/: embeddings_tests.rs
crates/epigraph-engine/: Cargo.toml
crates/epigraph-engine/benches/: engine_benchmarks.rs
crates/epigraph-engine/src/: agent_assessment.rs  bayesian.rs  bba.rs  belief_gate.rs  belief_query.rs  bp.rs  calibration.rs  cdst_bp.rs  cdst_sheaf.rs  classifier.rs  confidence.rs  cospan.rs  counterfactual.rs  dag.rs  diverse_retrieval.rs  diverse_select.rs  domain_decay.rs  edge_factor.rs  embedder.rs  epistemic_interval.rs  error_mass.rs  errors.rs  evidence.rs  interval_bp.rs  lib.rs  lifecycle.rs  promotion.rs  propagation.rs  reasoning.rs  recall.rs  reconciliation.rs  reputation.rs  rerank.rs  retention.rs  service.rs  sheaf.rs  silence_alarm.rs  theme_cluster.rs  theme_kmeans.rs  triple_extractor.rs  (+5 more)
crates/epigraph-engine/tests/: alt_set_cdst_integration.rs  blocker_compound_nbhd.rs  blocker_content_hash_prefix.rs  blocker_embedding_ann.rs  blocker_shared_triple.rs  blocker_theme_cluster.rs  blocker_union.rs  calibration_load.rs  cdst_corroborates_aggregation.rs  conformal_classify.rs  diverse_retrieval_integration.rs  diverse_retrieval_layering.rs  effective_source_strength_unit.rs  export_prov_o.rs  herb_belief_dump.rs  integration_live.rs  intra_source_discount_calibration.rs  intra_source_discount_regression.rs  perspectival_demo_t2.rs  perspectival_discover_load.rs  perspectival_divergence_check.rs  perspectival_interview_merge.rs  perspectival_loader.rs  perspectival_snapshot.rs  perspectival_t3.rs  perspective_belief_batch.rs  pipeline_end_to_end.rs  (+9 more)
crates/epigraph-events/: Cargo.toml
crates/epigraph-harvester/: .gitignore  API_REFERENCE.md  BUILD_NOTES.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  build.rs
crates/epigraph-ingest/: Cargo.toml
crates/epigraph-ingest-executor/: Cargo.toml
crates/epigraph-interfaces/: Cargo.toml
crates/epigraph-jobs/: Cargo.toml
crates/epigraph-mcp/: Cargo.toml
crates/epigraph-tools/: Cargo.toml
tests/engine-integration/: Cargo.toml
(+2032 files in other folders)
