[package]
name = "epigraph-cli"
description = "Command-line interface tools for EpiGraph data ingestion and analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["db"]
db = ["dep:epigraph-db", "dep:sqlx"]
genai = ["db"]

[[bin]]
name = "ingest_literature"
path = "src/bin/ingest_literature.rs"

[[bin]]
name = "ingest_git"
path = "src/bin/ingest_git.rs"

[[bin]]
name = "embed_bridge"
path = "src/bin/embed_bridge.rs"

[[bin]]
name = "analyze_graph"
path = "src/bin/analyze_graph.rs"

[[bin]]
name = "compare_routes"
path = "src/bin/compare_routes.rs"

[[bin]]
name = "rerank_bridges"
path = "src/bin/rerank_bridges.rs"
required-features = ["genai"]

[[bin]]
name = "dekg"
path = "src/bin/dekg.rs"

[[bin]]
name = "method_search"
path = "src/bin/method_search.rs"
required-features = ["db"]

[[bin]]
name = "protocol_gen"
path = "src/bin/protocol_gen.rs"
required-features = ["db"]

[[bin]]
name = "hypothesis"
path = "src/bin/hypothesis.rs"
required-features = ["db"]

[[bin]]
name = "experiment"
path = "src/bin/experiment.rs"
required-features = ["db"]

[dependencies]
epigraph-core = { workspace = true }
epigraph-engine = { workspace = true }
epigraph-crypto = { workspace = true }
epigraph-embeddings = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
epigraph-db = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
csv = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
dotenvy = "0.15"
base64 = "0.22"
linfa = { workspace = true }
linfa-clustering = { workspace = true }
ndarray = { workspace = true }

[lints]
workspace = true
