[package]
name = "epigraph-cli"
description = "Command-line interface tools for EpiGraph data ingestion and analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["db"]
db = ["dep:epigraph-db", "dep:sqlx"]
genai = ["db"]

[[bin]]
name = "recompute_claim_belief"
path = "src/bin/recompute_claim_belief.rs"
required-features = ["db"]

[[bin]]
name = "ingest_literature"
path = "src/bin/ingest_literature.rs"

[[bin]]
name = "ingest_git"
path = "src/bin/ingest_git.rs"

[[bin]]
name = "embed_bridge"
path = "src/bin/embed_bridge.rs"

[[bin]]
name = "analyze_graph"
path = "src/bin/analyze_graph.rs"

[[bin]]
name = "compare_routes"
path = "src/bin/compare_routes.rs"

[[bin]]
name = "rerank_bridges"
path = "src/bin/rerank_bridges.rs"
required-features = ["genai"]

[[bin]]
name = "bridge_component"
path = "src/bin/bridge_component.rs"
required-features = ["genai"]

[[bin]]
name = "bridge_sweep"
path = "src/bin/bridge_sweep.rs"
required-features = ["genai"]

[[bin]]
name = "dekg"
path = "src/bin/dekg.rs"

[[bin]]
name = "method_search"
path = "src/bin/method_search.rs"
required-features = ["db"]

[[bin]]
name = "protocol_gen"
path = "src/bin/protocol_gen.rs"
required-features = ["db"]

[[bin]]
name = "hypothesis"
path = "src/bin/hypothesis.rs"
required-features = ["db"]

[[bin]]
name = "experiment"
path = "src/bin/experiment.rs"
required-features = ["db"]

[[bin]]
name = "reembed"
path = "src/bin/reembed.rs"
required-features = ["db"]

[[bin]]
name = "decompose_claims"
path = "src/bin/decompose_claims.rs"
required-features = ["db"]

[[bin]]
name = "embed_backfill"
path = "src/bin/embed_backfill.rs"
required-features = ["db"]

[[bin]]
name = "cross_source_sweep"
path = "src/bin/cross_source_sweep.rs"
required-features = ["genai"]

[[bin]]
name = "calibrate_matcher"
path = "src/bin/calibrate_matcher.rs"
required-features = ["db"]

[[test]]
name = "cross_source_sweep_smoke"
path = "tests/cross_source_sweep_smoke.rs"
required-features = ["genai"]

[[bin]]
name = "bootstrap_clients"
path = "src/bin/bootstrap_clients.rs"
required-features = ["db"]

[[bin]]
name = "ingest-document"
path = "src/bin/ingest_document.rs"
required-features = ["db"]

[[bin]]
name = "backfill_factors"
path = "src/bin/backfill_factors.rs"
required-features = ["db"]

[dependencies]
epigraph-core = { workspace = true }
epigraph-engine = { workspace = true }
epigraph-crypto = { workspace = true }
epigraph-embeddings = { workspace = true }
epigraph-interfaces = { workspace = true }
epigraph-ds = { workspace = true }
epigraph-mcp = { workspace = true }
epigraph-ingest = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
epigraph-db = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
csv = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
dotenvy = "0.15"
base64 = "0.22"
blake3 = { workspace = true }
rand = { workspace = true }
linfa = { workspace = true }
linfa-clustering = { workspace = true }
ndarray = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }

[lints]
workspace = true
