[package]
name = "epigraph-core"
description = "Core domain primitives for EpiGraph epistemic knowledge graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
epigraph-crypto = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
