[package]
name = "epigraph-embeddings"
description = "Vector embedding service for semantic claim similarity in EpiGraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
epigraph-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = "0.1"  # Async trait support for EmbeddingService

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database (optional — only needed when storing/querying embeddings in PostgreSQL)
sqlx = { workspace = true, optional = true }
pgvector = { workspace = true, optional = true }  # PostgreSQL vector extension support

# Identifiers
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client for API calls (optional feature)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Tokenization for truncation logic
tiktoken-rs = { version = "0.5", optional = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
sqlx = { workspace = true }

[features]
default = ["db"]
db = ["sqlx", "pgvector"]  # Enable database storage/retrieval of embeddings
openai = ["reqwest", "tiktoken-rs"]  # Enable OpenAI API support
jina = ["reqwest"]  # Enable Jina multimodal embedding API support
local = []  # Enable local embedding model support

[[test]]
name = "embeddings_tests"
path = "tests/embeddings_tests.rs"

[lints]
workspace = true
