[package]
name = "epigraph-events"
description = "Event bus and pub/sub system for EpiGraph agentic framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
epigraph-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
