[package]
name = "epigraph-harvester"
version = "0.1.0"
edition = "2021"

[dependencies]
epigraph-core = { workspace = true }
epigraph-crypto = { workspace = true }
tonic = "0.11"  # gRPC framework
prost = "0.12"  # Protocol buffers
prost-types = "0.12"  # Well-known protobuf types
tokio = { workspace = true }  # Async runtime
tokio-stream = "0.1"  # Stream utilities
uuid = { workspace = true }  # UUID generation
chrono = { workspace = true }  # Timestamp handling
thiserror = { workspace = true }  # Error derive macros
tracing = { workspace = true }  # Structured logging
serde = { workspace = true }  # Serialization
serde_json = { workspace = true }  # JSON support
async-trait = "0.1"  # Async trait support

[build-dependencies]
tonic-build = "0.11"  # Proto compilation

[dev-dependencies]
tokio-test = "0.4"  # Async testing utilities
tokio = { workspace = true, features = ["rt", "macros"] }  # For tokio::test macro
