[package]
name = "epigraph-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
openapi = ["dep:utoipa"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
thiserror = { workspace = true }
blake3 = "1"  # High-performance hashing for content-addressed atom IDs
utoipa = { workspace = true, optional = true }

[lints]
workspace = true
