[package]
name = "epigraph-interfaces"
description = "Extension point traits for the EpiGraph open kernel (EncryptionProvider, PolicyGate, OrchestrationBackend)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }  # For #[tokio::test] in inline unit tests

[lints]
workspace = true
