[package]
name = "epigraph-mcp"
description = "Full-framework MCP server for EpiGraph — delegates to workspace crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates — the whole point: delegate, don't reimplement
epigraph-auth = { workspace = true }
epigraph-core = { workspace = true }
epigraph-crypto = { workspace = true }
epigraph-db = { workspace = true }
epigraph-ds = { workspace = true }
# `features = ["rerank"]` is pinned ON so the DEFAULT-feature build of the
# serving binary (`cargo build -p epigraph-mcp`, the prod deploy recipe) links
# the REAL HTTP cross-encoder client, not the keyless stub. The compile feature
# only chooses stub-vs-real; actual paid calls stay gated at RUNTIME by the
# `rerank=true` request param AND the presence of `RERANK_API_KEY`, so default-on
# carries no surprise-spend risk. Without this pin the default deploy would link
# the stub and rerank would be inert even with the key set.
epigraph-engine = { workspace = true, features = ["rerank"] }
epigraph-interfaces = { workspace = true }
epigraph-embeddings = { workspace = true }
epigraph-ingest = { workspace = true }
epigraph-ingest-executor = { workspace = true }

# MCP protocol (no sqlx dep — coexists with workspace sqlx 0.7)
rmcp = { workspace = true }
schemars = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Identifiers & time
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async trait support (for impl EmbeddingService for McpEmbedder)
async-trait = { workspace = true }

# CLI
clap = { workspace = true, features = ["derive", "env"] }

# Logging (stderr — stdout reserved for MCP JSON-RPC)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client (for embedding service)
reqwest = { workspace = true }

# Crypto primitives
hex = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

# Vendored OpenSSL for static (musl) builds
openssl = { version = "0.10", features = ["vendored"], optional = true }

# HTTP transport (axum 0.8 matches rmcp's streamable-http-server dep)
axum = "0.8"
http = "1"

[dev-dependencies]
epigraph-ingest = { workspace = true }
reqwest = { workspace = true }
blake3 = { workspace = true }
tower = "0.5"
# `no-env-filter` is REQUIRED for integration tests in tests/* to capture
# events emitted from src/ (different crate target). Without it, the macro's
# default env filter scopes capture to the test crate only.
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[features]
default = []
vendored-openssl = ["dep:openssl"]
# Explicit alias for the live HTTP cross-encoder rerank client. REDUNDANT in
# the default build (the `epigraph-engine` dep above already pins
# `features=["rerank"]` so the real client is always linked), retained so an
# operator can name the capability explicitly and so a future `default-features
# = false` build can re-enable it without editing the dep line.
rerank = ["epigraph-engine/rerank"]

[[bin]]
name = "epigraph-mcp-full"
path = "src/main.rs"

[lints]
workspace = true
