[package]
name = "epigraph-tools"
version.workspace = true
license.workspace = true
repository.workspace = true
edition = "2021"

[dependencies]
async-trait = { workspace = true }
epigraph-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }

[[example]]
name = "table_graph"
path = "examples/table_graph/main.rs"
